# 24RC

./: 24RC_new.code-workspace  CMakeLists.txt  sdkconfig  sdkconfig.old
components/boost_controller/: CMakeLists.txt  boost_controller.c  boost_controller.h
components/cmd_decoder/: CMakeLists.txt  cmd_decoder.c  cmd_decoder.h
components/device_manager/: CMakeLists.txt  device_manager.c  device_manager.h
components/gpio_table/: CMakeLists.txt  gpio_table.c  gpio_table.h
components/led_controller/: CMakeLists.txt  led_controller.c  led_controller.h
components/my_tcp_client/: CMakeLists.txt  my_tcp_client.c  my_tcp_client.h
components/my_udp_client/: CMakeLists.txt  my_udp_client.c  my_udp_client.h
components/pwm_controller/: CMakeLists.txt  pwm_controller.c  pwm_controller.h
components/spi_trans/: CMakeLists.txt  spi_trans.c  spi_trans.h
components/uart_controller/: CMakeLists.txt  uart_controller.c  uart_controller.h
components/wifi_connect/: CMakeLists.txt  wifi_connect.c  wifi_connect.h
main/: main.c
